--- a/web/app/themes/blank/src/scss/layout/_pricing.scss
+++ b/web/app/themes/blank/src/scss/layout/_pricing.scss
@@ -455,7 +455,7 @@
 							margin-bottom: 0px;
 						}
 
-						@include word-wrap();
+						// @include word_wrap();
 
 						@include breakpoint(md) {
 							max-width: 165px;
